import AbstractPayment from "./AbstractPayment";

export default class CachePayment extends AbstractPayment {
}
