export enum PaymentStatus {
  Pending,
  Payed,
  Refund,
}
