import AbstractSeat from "./AbstractSeat";

export default class GoldSeat extends AbstractSeat {
}
