import AbstractSeat from "./AbstractSeat";

export default class PlatinumSeat extends AbstractSeat {
}
