import AbstractSeat from "./AbstractSeat";

export default class SilverSeat extends AbstractSeat {
}
